fixed cutoff for main screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,6 @@ html {
 
 .main-container {
   display: flex;
-  margin-top: 55px;
 }
 
 .home-container {
